# softnet

./: .gitignore  Dockerfile  README.md  Softnet.bat  Softnet.sh  pyproject.toml  render.yaml  run.py
.devcontainer/: devcontainer.json
backend/: .env.example  config.py  main.py  pyproject.toml
backend/analysis/: bipartite.py  centrality.py  community_graph.py  density.py  ergm_mple.py  homophily.py
backend/analysis/community/: comparison.py  infomap.py  leiden.py  louvain.py  renumber.py
backend/api/: deps.py  router.py
backend/api/routes/: bipartite.py  centrality.py  community.py  enrichment.py  homophily.py  layout.py  metrics.py  projects.py  sankey.py  tasks.py  visualization.py
backend/bridges/: rpy2_ergm.py  wsl_ergm.py  wsl_graphtool.py
backend/core/: graph_store.py  project.py  serializers.py  tasks.py
backend/enrichment/: cache.py  websearch.py  wikidata.py  wikipedia.py
backend/ingest/: api_connector.py  csv_parser.py  excel_parser.py  gephi_parser.py  gexf_parser.py  graphml_parser.py
backend/layout/: community_layout.py  forceatlas2.py  utils.py  yifan_hu.py
backend/schemas/: centrality.py  community.py  enrichment.py  layout.py  metrics.py  project.py  visualization.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
frontend/src/components/charts/: DistributionChart.svelte  HomophilyChart.svelte  (+1 more)
frontend/src/lib/: api.ts  graphStore.ts  projectStore.ts  types.ts
frontend/src/styles/: global.css
samples/: karate.gexf
scripts/: dev.sh  install_r_deps.R
wsl/: ergm_worker.py  requirements_wsl.txt  sbm_worker.py  setup_graphtool.sh
(+19 files in other folders)
